# Lima-camera-ufxc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pom.xml  pom_64.xml
doc/: index.rst
include/: UfxcCamera.h  UfxcCompatibility.h  UfxcDetInfoCtrlObj.h  UfxcImageSize.h  UfxcInterface.h  UfxcSyncCtrlObj.h  constants.h  corrections.h  decode14b.h  decode2b.h  tools.h
sdk/linux/include/ufxc/: CaptureManager.h  ConfigAcquisition.h  ConfigDetector.h  ConfigPortInterface.h  DaqConnection.h  DaqMonitoring.h  DataCaptureListener.h  DataReceiver.h  UFXCException.h  UFXCInterface.h  UFXCLibTypesAndConsts.h  UfxlibTypesAndConsts.h
src/: UfxcCamera.cpp  UfxcDetInfoCtrlObj.cpp  UfxcInterface.cpp  UfxcSyncCtrlObj.cpp  constants.c  corrections.c  decode14b.c  decode2b.c  tools.c
